--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "extends": "@tsconfig/recommended/tsconfig.json",
   "compilerOptions": {
-    "lib": ["es6", "es2017", "dom"],
-    "paths": {
-      "*": ["*", "node_modules/@types/node/*"]
-    },
+    "lib": ["es2019", "dom"],
     "sourceMap": true,
-    "mapRoot": "/assets",
-    "sourceRoot": "/assets"
-  }
+    "mapRoot": "/assets/javascripts",
+    "sourceRoot": "/assets/javascripts",
+    "baseUrl": "./",
+    "strict": false
+  },
+  "include": ["app/assets/javascripts/*"]
 }
