--- a/server/package.json
+++ b/server/package.json
@@ -17,9 +17,7 @@
     "autoprefixer": "10.4.12",
     "postcss": "8.4.16",
     "tailwindcss": "2.2.19",
-    "eslint": "8.24.0"
+    "eslint": "8.24.0",
+    "typescript": "4.8.3"
   },
-  "dependencies": {
-    "typescript": "^4.8.3"
-  }
 }
