Replace sbt-web with custom task (#3541)
sbt-web plugin we are using is no longer maintained and 5 years old. It uses Typescript 2 while current one is Typescript 4. Which means we can't use latest features and improvements.

This PR removes sbt-web and instead adds custom TypescriptBuilder.scala file, similar to TailwindBuilder.scala. That file defines a task that calls tsc (typescript compiler) to compile our few TS files. Code is a bit complicated due to sbt APIs which aren't very straightforward.

That task is hooked into sbt-web pipeline in build.sbt and runs before digest/gzip tasks. In dev mode, upon recompilation TS files will be recompiled only if some of them was changed. TS files are not recompiled on java file updates.

Additionally this PR updates TS version to 4.8. I couldn't find a way to split these two changes.

--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "10.4.12",
     "postcss": "8.4.16",
     "tailwindcss": "2.2.19",
-    "eslint": "8.24.0"
+    "eslint": "8.24.0",
+    "typescript": "4.8.3"
   }
 }
