Fail on new images being added (#3551)
jest-image-snapshot automatically adds image snapshot if it's missing during test run. That's good for local development but for CI it's undesired: we want test to fail in cases of missing snapshots. This PR adds extra step to github action workflow which ensures that no screenshots being added after test run.

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -71,6 +71,10 @@ jobs:
         run: bin/run-browser-test-env --aws --ci
       - name: Run browser tests with Localstack
         run: bin/run-browser-tests-ci-batch ${{ matrix.batch_number }}
+      - name: Verify no new image snapshots added
+        # jest-image-snapshots automatically adds snapshot if it's missing.
+        # Use git diff to fail if we detect new images.
+        run: git add browser-test/image_snapshots ; git diff --compact-summary --exit-code HEAD
       - name: Upload image diff outputs
         uses: actions/upload-artifact@v3
         with:
