--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -134,12 +134,13 @@ applicant_generic_oidc.last_name_attribute = ${?APPLICANT_OIDC_LAST_NAME_ATTRIBU
 login_gov.client_id = "urn:gov:gsa:openidconnect.profiles:sp:sso:ar:civiform_dev"
 login_gov.client_id = ${?APPLICANT_OIDC_CLIENT_ID}
 login_gov.client_id = ${?LOGIN_GOV_CLIENT_ID}
+
 login_gov.discovery_uri = "https://idp.int.identitysandbox.gov/.well-known/openid-configuration"
 login_gov.discovery_uri = ${?APPLICANT_OIDC_DISCOVERY_URI}
 login_gov.discovery_uri = ${?LOGIN_GOV_DISCOVERY_URI}
 
 # Additional Scopes should be space separated values.
-login_gov.client_id = ${?APPLICANT_OIDC_ADDITIONAL_SCOPES}
+login_gov.additional_scopes = ${?APPLICANT_OIDC_ADDITIONAL_SCOPES}
 login_gov.additional_scopes = ${?LOGIN_GOV_ADDITIONAL_SCOPES}
 
 # [Authentication Context Class Reference requests](https://developers.login.gov/oidc/#request-parameters)
