--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -128,6 +128,28 @@ applicant_generic_oidc.first_name_attribute = ${?APPLICANT_OIDC_FIRST_NAME_ATTRI
 applicant_generic_oidc.middle_name_attribute = ${?APPLICANT_OIDC_MIDDLE_NAME_ATTRIBUTE}
 applicant_generic_oidc.last_name_attribute = ${?APPLICANT_OIDC_LAST_NAME_ATTRIBUTE}
 
+
+## Login.gov OIDC integration
+# https://developers.login.gov/oidc/
+login_gov.client_id = "urn:gov:gsa:openidconnect.profiles:sp:sso:ar:civiform_dev"
+login_gov.client_id = ${?APPLICANT_OIDC_CLIENT_ID}
+login_gov.client_id = ${?LOGIN_GOV_CLIENT_ID}
+
+login_gov.discovery_uri = "https://idp.int.identitysandbox.gov/.well-known/openid-configuration"
+login_gov.discovery_uri = ${?APPLICANT_OIDC_DISCOVERY_URI}
+login_gov.discovery_uri = ${?LOGIN_GOV_DISCOVERY_URI}
+
+# Additional Scopes should be space separated values.
+login_gov.additional_scopes = ${?APPLICANT_OIDC_ADDITIONAL_SCOPES}
+login_gov.additional_scopes = ${?LOGIN_GOV_ADDITIONAL_SCOPES}
+
+# [Authentication Context Class Reference requests](https://developers.login.gov/oidc/#request-parameters)
+# Valid values are:
+# - "http://idmanagement.gov/ns/assurance/ial/1" (Open registration, email only)
+# - or "http://idmanagement.gov/ns/assurance/ial/2" (Requires identity verification)
+login_gov.acr_value="http://idmanagement.gov/ns/assurance/ial/1"
+login_gov.acr_value=${?LOGIN_GOV_ACR_VALUE}
+
 ## ADFS integration
 # ADFS secrets must be provided by environment variables - we cannot check them in.
 adfs.client_id = ${?ADFS_CLIENT_ID}
