--- a/.github/workflows/format.yaml
+++ b/.github/workflows/format.yaml
@@ -67,6 +67,11 @@ jobs:
         id: check_bin_script_docs
         run: bin/help
 
+      - name: Run validate_java_classes_marked_final
+        run: bin/validate_java_classes_marked_final
+      - name: show bin/validate_java_classes_marked_final diff
+        run: git add .; git diff --exit-code HEAD
+
   formatter-dockerfile:
     runs-on: ubuntu-latest
     steps:
