--- a/.github/workflows/pr_env_var_docs.yaml
+++ b/.github/workflows/pr_env_var_docs.yaml
@@ -36,6 +36,7 @@ jobs:
         uses: codecov/codecov-action@v3
         with:
           verbose: true
+          files: coverage.xml
           # We're getting intermittent issues with codecov trying to upload lately
           # disabling it from failing the entire pipeline for now.
           fail_ci_if_error: false
