--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -225,6 +225,7 @@ play.modules {
   enabled += modules.MainModule
   enabled += modules.DatabaseSeedModule
   enabled += modules.ProgramCreationModule
+  enabled += modules.DurableJobModule
 
   # If there are any built-in modules that you want to disable, you can list them here.
   #disabled += ""
