--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -696,6 +696,7 @@ application_status_tracking_enabled = ${?CIVIFORM_APPLICATION_STATUS_TRACKING_EN
 program_read_only_view_enabled = false
 program_read_only_view_enabled = ${?PROGRAM_READ_ONLY_VIEW_ENABLED}
 
+program_eligibility_conditions_enabled = false
 program_eligibility_conditions_enabled = ${?PROGRAM_ELIGIBILITY_CONDITIONS_ENABLED}
 
 # If enabled allows for setting of feature flags via HTTP.
