--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -14,6 +14,8 @@
 # And if an environment variable exists when there is no other subsitution, then
 # HOCON will fall back to substituting environment variable:
 #mykey = ${JAVA_HOME}
+#
+# Environment variable substitutions should all be SCREAMING_SNAKE_CASE.
 
 include "helper/auth.conf"
 include "helper/cloud.conf"
