--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -197,6 +197,12 @@ measurement_id = ${?MEASUREMENT_ID}
 support_email_address = "CiviForm@seattle.gov"
 support_email_address = ${?SUPPORT_EMAIL_ADDRESS}
 
+## IT Email Address
+# This email address receives error notifications from CiviForm when things break
+it_email_address = "CiviForm@seattle.gov"
+it_email_address = ${?SUPPORT_EMAIL_ADDRESS}
+it_email_address = ${?IT_EMAIL_ADDRESS}
+
 staging_program_admin_notification_mailing_list = "seattle-civiform-program-admins-notify@google.com"
 staging_program_admin_notification_mailing_list = ${?STAGING_ADMIN_LIST}
 staging_ti_notification_mailing_list = "seattle-civiform-trusted-intermediaries-notify@google.com"
