--- a/.github/workflows/pr_env_var_docs.yaml
+++ b/.github/workflows/pr_env_var_docs.yaml
@@ -1,7 +1,7 @@
 name: pr_env_var_docs
 
-# cancels in-progress jobs on this pull request
-# avoids wasted work when a new commit is pushed
+# Cancels in-progress jobs on this pull request when new commits are pushed.
+# This avoids wasted work for old commits.
 concurrency:
   group: pr-env-var-docs-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
