--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@tailwindcss/line-clamp": "0.4.2",
     "@tsconfig/recommended": "1.0.2",
+    "@types/cleave.js": "1.4.7",
     "@types/jest": "29.4.0",
     "@typescript-eslint/eslint-plugin": "5.54.0",
     "@typescript-eslint/parser": "5.54.0",
@@ -26,5 +27,9 @@
     "typescript": "4.9.5",
     "webpack": "5.75.0",
     "webpack-cli": "5.0.1"
+  },
+  "dependencies": {
+    "cleave.js": "1.6.0",
+    "libphonenumber-js": "1.10.21"
   }
 }
