--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/line-clamp": "0.4.2",
     "@tsconfig/recommended": "1.0.2",
     "@types/cleave.js": "1.4.7",
+    "cleave.js": "1.6.0",
     "@types/jest": "29.4.0",
     "@typescript-eslint/eslint-plugin": "5.54.0",
     "@typescript-eslint/parser": "5.54.0",
