--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,10 @@ server/code-coverage/*
 
 # Compiled css
 tailwind.css
+
+# env-var-doc python things
+env-var-docs/venv
+env-var-docs/**/*build
+env-var-docs/**/*.egg*
+.coverage
+coverage.xml
