--- a/.github/workflows/build_push_ci.yaml
+++ b/.github/workflows/build_push_ci.yaml
@@ -49,7 +49,7 @@ jobs:
           DOCKER_BUILDKIT: 1
           PLATFORM: ${{ matrix.platform }}
           DOCKER_HUB_ACCESS_TOKEN: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-          DOCKER_HUB_USERNAME: civiform
+          DOCKER_HUB_USERNAME: civiformexygy
         run: ${{ matrix.script }}
 
   build_dependancies:
@@ -126,5 +126,5 @@ jobs:
           DOCKER_BUILDKIT: 1
           PLATFORM: ${{ matrix.platform }}
           DOCKER_HUB_ACCESS_TOKEN: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-          DOCKER_HUB_USERNAME: civiform
+          DOCKER_HUB_USERNAME: civiformexygy
         run: ${{ matrix.script }}
