Fixes for bin/run-browser-tests-local
This fixes several issues found with running PWDEBUG=1 bin/run-browser-tests-local.

1. Adds a --local flag to bin/run-browser-test-env, which sets BASE_URL to http://localhost:9999, which the local browser tests expect. Otherwise, upon logout, it will attempt to go to civiform:9000 instead and fail. It also includes an additional compose file that exposes port 3390, as local tests will need to be able to talk to dev-oidc directly for redirects. Because this will conflict with bin/run-dev, this is not enabled by default.

2. Sets LOCALSTACK_URL to point to port 6645 in bin/run-browser-tests-local, which is what is specified in browser-test-compose.yml.

3. Adds the flag for starting the JVM debugger on port 9457 to allow connecting the debugger during browser tests.

4. Updates the test_oidc_provider.js file to add the paths for localhost:9999 as allowed redirect URIs.

--- a/browser-test/browser-test-compose.yml
+++ b/browser-test/browser-test-compose.yml
@@ -25,9 +25,9 @@ services:
       - IDCS_DISCOVERY_URI=http://dev-oidc:3390/.well-known/openid-configuration
       - APPLICANT_REGISTER_URI=http://dev-oidc:3390/
       - DB_JDBC_STRING=jdbc:postgresql://database:5432/postgres
-      - BASE_URL=http://civiform:9000
+      - BASE_URL=${BASE_URL:-http://civiform:9000}
       - LOCALSTACK_URL=http://localhost.localstack.cloud:4566
       - CIVIFORM_TIME_ZONE_ID
       - CIVIFORM_ADMIN_REPORTING_UI_ENABLED=true
     command: ~runBrowserTestsServer
-    entrypoint: ./entrypoint.sh
+    entrypoint: ./entrypoint.sh -jvm-debug "0.0.0.0:9457"
