--- a/server/conf/application.dev-browser-tests.conf
+++ b/server/conf/application.dev-browser-tests.conf
@@ -16,6 +16,8 @@ program_read_only_view_enabled = false
 esri_address_correction_enabled = false
 intake_form_enabled = false
 nongated_eligibility_enabled = false
+
+#Phone question type enabling flag
 phone_question_type_enabled = false
 
 # The default value is true, we set it to false here because we do not know
