--- a/server/conf/helper/feature-flags.conf
+++ b/server/conf/helper/feature-flags.conf
@@ -53,3 +53,6 @@ nongated_eligibility_enabled = ${?NONGATED_ELIGIBILITY_ENABLED}
 phone_question_type_enabled = false
 phone_question_type_enabled = ${?PHONE_QUESTION_TYPE_ENABLED}
 
+# New login page flag
+new_login_form_enabled = false
+new_login_form_enabled = ${?NEW_LOGIN_FORM_ENABLED}
