--- a/.github/workflows/pr_env_var_docs.yaml
+++ b/.github/workflows/pr_env_var_docs.yaml
@@ -12,8 +12,9 @@ on:
       - 'main'
     paths:
       - 'env-var-docs/**'
-      - 'server/conf/application.conf'
       - 'server/conf/env-var-docs.json'
+      - 'server/conf/application.conf'
+      - 'server/conf/helper/*.conf'
       - '.github/workflows/pr_env_var_docs.yaml'
 
 jobs:
@@ -40,3 +41,6 @@ jobs:
           # We're getting intermittent issues with codecov trying to upload lately
           # disabling it from failing the entire pipeline for now.
           fail_ci_if_error: false
+
+      - name: Check environment variables
+        run: bin/env-var-docs-check-vars
