--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@tailwindcss/line-clamp": "0.4.2",
     "@tsconfig/recommended": "1.0.2",
+    "@types/cleave.js": "1.4.7",
     "@types/jest": "29.4.1",
     "@typescript-eslint/eslint-plugin": "5.55.0",
     "@typescript-eslint/parser": "5.55.0",
