--- a/server/conf/messages.am
+++ b/server/conf/messages.am
@@ -16,11 +16,13 @@ button.apply=አመልክት
 button.applySr=ወደ {0} አመልክት
 button.chooseFile=ፋይል ይምረጡ
 button.continue=ቀጥል
+button.continueCommonIntakeSr=UPDATE ME
 button.continueSr=ወደ {0} ማመልከትን ቀጥል
 button.createAccount=መለያ ፍጠር
 button.deleteFile=ሰርዝ
 button.edit=አርትዕ
 button.editAddress=አድራሻን አርትዕ ያድርጉ
+button.editCommonIntakeSr=UPDATE ME
 button.editSr=ወደ {0} ያስገቡትን ማመልከቻ ያርትዑ
 button.goBackAndEdit=ይመለሱ እና አርትዕ ያድርጉ
 button.guestLogin=እንደ እንግዳ ቀጥል
@@ -33,6 +35,8 @@ button.removeEntity={0}ን አስወግድ
 button.review=ገምግም
 button.saveAndConfirm=ያስቀምጡ እና ያረጋግጡ
 button.skipFileUpload=ዝለል
+button.startHere=UPDATE ME
+button.startHereCommonIntakeSr=UPDATE ME
 button.submit=አስገባ
 # NO TRANSLATION NEEDED - this appears before applicants select their preferred language, so we always use the default.
 button.untranslatedSubmit=Submit
@@ -65,9 +69,12 @@ content.suggestedAddresses=የተጠቆሙ አድራሻዎች፦
 dialog.confirmDelete=ይህን {0} ማስወገድ እንደሚፈልጉ እርግጠኛ ነዎት? ይህ ለውጥ «ቀጣይ»ን ከተጫኑ በኋላ ይቀመጣል፣ እና ከዚህ {0} ጋር የተጎዳኘ ሁሉም ውሂብ ይጠፋል።
 email.applicationReceivedBody=የ{0} ፕሮግራም ማመልከቻዎ ደርሷል። የአመልካች መታወቂያዎ {1} ነው፣ እና የማመልከቻ መታወቂያው {2} ነው
 email.applicationReceivedSubject=የ{0} ፕሮግራም ማመልከቻዎ ደርሷል
+email.applicationUpdateSubject=UPDATE ME
 email.loginToCiviform=ወደ CiviForm {0} ላይ በመለያ ይግቡ
 email.tiApplicationSubmittedBody=እንደ {1} ያስገቡት የ{0} ፕሮግራም ማመልከቻ ደርሷል፣ እና የማመልከቻ መታወቂያው {2} ነው።
 email.tiApplicationSubmittedSubject=ለ{0} ፕሮግራም አመልካች {1}ን በመወከል ማመልከቻ አስገብተዋል
+email.tiApplicationUpdateBody=UPDATE ME
+email.tiApplicationUpdateSubject=UPDATE ME
 email.tiManageYourClients=ደንበኛዎችዎን በ{0} ላይ ያስተዳድሩ።
 error.notFoundDescription=እባክዎ ወደ ኋላ ይመለሱ ወይም ወደ {0} ይመለሱ
 error.notFoundDescriptionLink=መነሻ ገጽ
@@ -106,12 +113,15 @@ tag.mayNotQualifyTi=ደንበኛዎ ብቁ ላይሆኑ ይችላሉ
 tag.mayQualify=ብቁ ሊሆኑ ይችላሉ
 tag.mayQualifyTi=ደንበኛዎ ብቁ ሊሆኑ ይችላሉ
 title.activeProgramsUpdated=ያልተጀመሩ
+title.allProgramsSection=UPDATE ME
 title.applicantNotEligible=እርስዎ ጥያቄዎች በሰጧቸው ምላሾች መሰረት ለ{0} ብቁ ላይሆኑ ይችላሉ።
 title.applicantNotEligibleTi=እርስዎ ለሚከተሉት ጥያቄዎች በሰጧቸው ምላሾች መሰረት ደንበኛዎ ለ{0} ብቁ ላይሆኑ ይችላሉ።
 title.applicationConfirmation=የማመልከቻ ማረጋገጫ
 title.cannotCheckEligibility=በዚህ ጊዜ ለ{0} የእርስዎን ብቁነት ማረጋገጥ አንችልም።
 title.cannotCheckEligibilityTi=በዚህ ጊዜ ለ{0} የደንበኛዎን ብቁነት ማረጋገጥ አንችልም።
+title.commonIntakeSummary=UPDATE ME
 title.createAnAccount=መለያ ይፍጠሩ ወይም ይግቡ
+title.findServicesSection=UPDATE ME
 title.inProgressProgramsUpdated=በሂደት ላይ
 title.login=ግባ
 title.noValidAddress=ምንም የሚሠሩ አድራሻዎች አልተገኙም
