--- a/server/package.json
+++ b/server/package.json
@@ -27,5 +27,8 @@
     "typescript": "4.9.5",
     "webpack": "5.76.1",
     "webpack-cli": "5.0.1"
+  },
+  "dependencies": {
+    "cleave.js": "1.6.0"
   }
 }
